# gollvm-lto-ng

llvm/include/llvm/LTO/: Config.h
llvm/include/llvm/Transforms/Utils/: GoGcOptimize.h
llvm/lib/LTO/: LTOBackend.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/Utils/: CMakeLists.txt  GoGcLeakKind.def  GoGcOptimize.cpp
llvm/tools/gold/: gold-plugin.cpp
llvm/tools/gollvm/: .gitignore  CMakeLists.txt
llvm/tools/gollvm/bridge/: go-c.h  go-llvm-bexpression.cpp  go-llvm-bexpression.h  go-llvm-bfunction.cpp  go-llvm-bfunction.h  go-llvm-builtins.cpp  go-llvm-dibuildhelper.cpp  go-llvm-irbuilders.cpp  go-llvm-irbuilders.h  go-llvm-materialize.cpp  go-llvm-typemanager.cpp  go-llvm-typemanager.h  go-llvm.cpp  go-llvm.h  go-sha1.cpp
llvm/tools/gollvm/driver/: ArchCpuSetup.cpp  Command.cpp  Compilation.cpp  Compilation.h  CompileGo.cpp  Distro.cpp  Distro.h  Driver.cpp  Driver.h  GnuTools.cpp  GnuTools.h  GollvmOptions.cpp  GollvmOptions.h  GollvmOptions.td  IntegAssembler.cpp  LinuxToolChain.cpp  Tool.h  ToolChain.h
llvm/tools/gollvm/driver-main/: llvm-goc.cpp
llvm/tools/gollvm/gofrontend/go/: expressions.cc  expressions.h  go.cc  gogo.cc  gogo.h  import.cc
llvm/tools/gollvm/gofrontend/libgo/: libgo-packages.txt
llvm/tools/gollvm/gofrontend/libgo/go/errors/: join.go
llvm/tools/gollvm/gofrontend/libgo/go/flag/: flag.go
llvm/tools/gollvm/gotools/: CMakeLists.txt
llvm/tools/gollvm/libgo/: CMakeLists.txt
llvm/tools/gollvm/libgo/godumpspec/: godumpspec.cpp
llvm/tools/gollvm/passes/: GC.cpp  GoAnnotation.cpp  GoNilChecks.cpp  GoSafeGetg.cpp  GoSafeGetg.h  GoStatepoints.cpp  GollvmPasses.h  RemoveAddrSpace.cpp  RemoveAddrSpace.h  Util.cpp
llvm/tools/gollvm/staticpkg/: CMakeLists.txt
llvm/tools/gollvm/staticpkg/src/goinstrument/: goinstrument.go
llvm/tools/gollvm/test/: CMakeLists.txt  check-ir.go  const-prop.go  dce.go  driver-test.go  func-pointer.go  inline-function.go  lit.cfg.py  lit.site.cfg.py.in  merge-functions.go  optimize-gc-alloc.go  outline-function.go
llvm/tools/gollvm/test/Inputs/: dce-foobar.go  foo-noinline.go  foobar-noinline.go  gort-symbols.s  longfun-noinline.go  longfun.go  outline.go
llvm/tools/gollvm/unittests/BackendCore/: BackendArrayStruct.cpp  BackendCABIOracleTests.cpp  BackendCallTests.cpp  BackendCoreTests.cpp  BackendDebugEmit.cpp  BackendExprTests.cpp  BackendFcnTests.cpp  BackendNodeTests.cpp  BackendPointerExprTests.cpp  BackendStmtTests.cpp  BackendVarTests.cpp  TestUtils.h
llvm/tools/gollvm/unittests/Driver/: DriverTests.cpp
llvm/tools/gollvm/unittests/TestUtils/: DiffUtils.cpp
(+8 files in other folders)
